# fsharp

./: .gitignore  License.html  Makefile.in  README  config.make.in  configure.ac  source-build-version
lib/original/4.0/r53135/: FSharp.Build.xml  FSharp.Compiler.xml  FSharp.Core.optdata  FSharp.Core.sigdata  FSharp.Core.xml  fsc.xml
src/: Makefile
src/absil/: ilsupp.fs
src/assemblyinfo/: assemblyinfo.FSharp.Compiler.dll.fs  assemblyinfo.fsc-proto.exe.fs
src/fsharp/: Makefile  Makefile.in  Makefile.inc  config.make  config.make.in  fsc.fs  ilxgen.fs  lib.fs  pars.fsy  targets.make
src/fsharp/FSharp.Build/: Makefile  Makefile.in
src/fsharp/FSharp.Build-proto/: Makefile  Makefile.in
src/fsharp/FSharp.Compiler/: FSComp.fs  FSComp.resources  FSComp.resx  FSStrings.resources  FSharp.Compiler.dll.mdb  FSharp.Compiler.xml  Makefile  Makefile.in  illex.fs  lex.fs  pars.fs  pars.fsi
src/fsharp/FSharp.Compiler-proto/: Makefile  Makefile.in
src/fsharp/FSharp.Core/: Makefile  Makefile.in  event.fs  seq.fs
src/fsharp/FSharp.Core/math/: z.fs
src/fsharp/Fsc/: Makefile  Makefile.in
src/fsharp/Fsc-proto/: Makefile  Makefile.in
