#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([fsharp], [0.1], [avidigal@novell.com])

# Checks for programs.
AC_PROG_MAKE_SET

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 src/fsharp/FSharp.Build-proto/Makefile
                 src/fsharp/FSharp.Build/Makefile
                 src/fsharp/FSharp.Compiler-proto/Makefile
                 src/fsharp/FSharp.Compiler/Makefile
                 src/fsharp/FSharp.Core/Makefile
                 src/fsharp/Fsc-proto/Makefile
                 src/fsharp/Fsc/Makefile
                 src/fsharp/Makefile])
AC_OUTPUT
